// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Upload List handle error 1`] = `
<span
  class=""
>
  <div
    class="jc-upload jc-upload-select jc-upload-select-text"
  >
    <span
      class="jc-upload"
      role="button"
      tabindex="0"
    >
      <input
        accept=""
        style="display: none;"
        type="file"
      />
      <button>
        upload
      </button>
    </span>
  </div>
  <div
    class="jc-upload-list jc-upload-list-text"
  >
    <div
      class="jc-upload-list-item jc-upload-list-item-error"
    >
      <div
        class="jc-upload-list-item-info"
      >
        <span>
          <i
            class="jcicon jcicon-paper-clip "
          />
          <span
            class="jc-upload-list-item-name"
            title="foo.png"
          >
            foo.png
          </span>
        </span>
      </div>
      <i
        class="jcicon jcicon-cross "
        title="Remove file"
      />
      <div
        class="jc-upload-list-item-progress fade-leave"
      >
        <div
          class="jc-progress jc-progress-line jc-progress-status-normal jc-progress-default"
        >
          <div>
            <div
              class="jc-progress-outer"
            >
              <div
                class="jc-progress-inner"
              >
                <div
                  class="jc-progress-bg"
                  style="width: 0%; height: 2px;"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</span>
`;

exports[`Upload List should be uploading when upload a file 1`] = `
<span
  class=""
>
  <div
    class="jc-upload jc-upload-select jc-upload-select-text"
  >
    <span
      class="jc-upload"
      role="button"
      tabindex="0"
    >
      <input
        accept=""
        style="display: none;"
        type="file"
      />
      <button>
        upload
      </button>
    </span>
  </div>
  <div
    class="jc-upload-list jc-upload-list-text"
  >
    <div
      class="jc-upload-list-item jc-upload-list-item-uploading jc-upload-animate-enter"
    >
      <div
        class="jc-upload-list-item-info"
      >
        <span>
          <i
            class="jcicon jcicon-loading  jcicon-spin"
          />
          <span
            class="jc-upload-list-item-name"
            title="foo.png"
          >
            foo.png
          </span>
        </span>
      </div>
      <i
        class="jcicon jcicon-cross "
        title="Remove file"
      />
      <div
        class="jc-upload-list-item-progress"
      >
        <div
          class="jc-progress jc-progress-line jc-progress-status-normal jc-progress-default"
        >
          <div>
            <div
              class="jc-progress-outer"
            >
              <div
                class="jc-progress-inner"
              >
                <div
                  class="jc-progress-bg"
                  style="width: 0%; height: 2px;"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</span>
`;

exports[`Upload List should be uploading when upload a file 2`] = `
<span
  class=""
>
  <div
    class="jc-upload jc-upload-select jc-upload-select-text"
  >
    <span
      class="jc-upload"
      role="button"
      tabindex="0"
    >
      <input
        accept=""
        style="display: none;"
        type="file"
      />
      <button>
        upload
      </button>
    </span>
  </div>
  <div
    class="jc-upload-list jc-upload-list-text"
  >
    <div
      class="jc-upload-list-item jc-upload-list-item-done"
    >
      <div
        class="jc-upload-list-item-info"
      >
        <span>
          <i
            class="jcicon jcicon-paper-clip "
          />
          <span
            class="jc-upload-list-item-name"
            title="foo.png"
          >
            foo.png
          </span>
        </span>
      </div>
      <i
        class="jcicon jcicon-cross "
        title="Remove file"
      />
      <div
        class="jc-upload-list-item-progress fade-leave"
      >
        <div
          class="jc-progress jc-progress-line jc-progress-status-normal jc-progress-default"
        >
          <div>
            <div
              class="jc-progress-outer"
            >
              <div
                class="jc-progress-inner"
              >
                <div
                  class="jc-progress-bg"
                  style="width: 0%; height: 2px;"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</span>
`;

exports[`Upload List should non-image format file preview 1`] = `
<span
  class=""
>
  <div
    class="jc-upload jc-upload-select jc-upload-select-picture"
  >
    <span
      class="jc-upload"
      role="button"
      tabindex="0"
    >
      <input
        accept=""
        style="display: none;"
        type="file"
      />
      <button>
        upload
      </button>
    </span>
  </div>
  <div
    class="jc-upload-list jc-upload-list-picture"
  >
    <div
      class="jc-upload-list-item jc-upload-list-item-done"
    >
      <div
        class="jc-upload-list-item-info"
      >
        <span>
          <a
            class="jc-upload-list-item-thumbnail"
            href="https://cdn.xxx.com/aaa.zip"
            rel="noopener noreferrer"
            target="_blank"
          >
            <i
              class="jcicon jcicon-file  jc-upload-list-item-icon"
            />
          </a>
          <a
            class="jc-upload-list-item-name"
            href="https://cdn.xxx.com/aaa.zip"
            rel="noopener noreferrer"
            target="_blank"
            title="not-image"
          >
            not-image
          </a>
        </span>
      </div>
      <i
        class="jcicon jcicon-cross "
        title="Remove file"
      />
    </div>
    <div
      class="jc-upload-list-item jc-upload-list-item-done"
    >
      <div
        class="jc-upload-list-item-info"
      >
        <span>
          <a
            class="jc-upload-list-item-thumbnail"
            href="https://cdn.xxx.com/aaa"
            rel="noopener noreferrer"
            target="_blank"
          >
            <img
              alt="image"
              src="https://cdn.xxx.com/aaa"
            />
          </a>
          <a
            class="jc-upload-list-item-name"
            href="https://cdn.xxx.com/aaa"
            rel="noopener noreferrer"
            target="_blank"
            title="image"
          >
            image
          </a>
        </span>
      </div>
      <i
        class="jcicon jcicon-cross "
        title="Remove file"
      />
    </div>
    <div
      class="jc-upload-list-item jc-upload-list-item-done"
    >
      <div
        class="jc-upload-list-item-info"
      >
        <span>
          <a
            class="jc-upload-list-item-thumbnail"
            href="https://cdn.xxx.com/aaa.xx"
            rel="noopener noreferrer"
            target="_blank"
          >
            <i
              class="jcicon jcicon-file  jc-upload-list-item-icon"
            />
          </a>
          <a
            class="jc-upload-list-item-name"
            href="https://cdn.xxx.com/aaa.xx"
            rel="noopener noreferrer"
            target="_blank"
            title="not-image"
          >
            not-image
          </a>
        </span>
      </div>
      <i
        class="jcicon jcicon-cross "
        title="Remove file"
      />
    </div>
    <div
      class="jc-upload-list-item jc-upload-list-item-done"
    >
      <div
        class="jc-upload-list-item-info"
      >
        <span>
          <a
            class="jc-upload-list-item-thumbnail"
            href="https://cdn.xxx.com/aaa.png/xx.xx"
            rel="noopener noreferrer"
            target="_blank"
          >
            <i
              class="jcicon jcicon-file  jc-upload-list-item-icon"
            />
          </a>
          <a
            class="jc-upload-list-item-name"
            href="https://cdn.xxx.com/aaa.png/xx.xx"
            rel="noopener noreferrer"
            target="_blank"
            title="not-image"
          >
            not-image
          </a>
        </span>
      </div>
      <i
        class="jcicon jcicon-cross "
        title="Remove file"
      />
    </div>
    <div
      class="jc-upload-list-item jc-upload-list-item-done"
    >
      <div
        class="jc-upload-list-item-info"
      >
        <span>
          <a
            class="jc-upload-list-item-thumbnail"
            href="https://cdn.xxx.com/xx.xx/aaa.png"
            rel="noopener noreferrer"
            target="_blank"
          >
            <img
              alt="image"
              src="https://cdn.xxx.com/xx.xx/aaa.png"
            />
          </a>
          <a
            class="jc-upload-list-item-name"
            href="https://cdn.xxx.com/xx.xx/aaa.png"
            rel="noopener noreferrer"
            target="_blank"
            title="image"
          >
            image
          </a>
        </span>
      </div>
      <i
        class="jcicon jcicon-cross "
        title="Remove file"
      />
    </div>
    <div
      class="jc-upload-list-item jc-upload-list-item-done"
    >
      <div
        class="jc-upload-list-item-info"
      >
        <span>
          <a
            class="jc-upload-list-item-thumbnail"
            href="https://cdn.xxx.com/xx.xx/aaa.png"
            rel="noopener noreferrer"
            target="_blank"
          >
            <img
              alt="image"
              src="data:image/png;base64,UEsDBAoAAAAAADYZYkwAAAAAAAAAAAAAAAAdAAk"
            />
          </a>
          <a
            class="jc-upload-list-item-name"
            href="https://cdn.xxx.com/xx.xx/aaa.png"
            rel="noopener noreferrer"
            target="_blank"
            title="image"
          >
            image
          </a>
        </span>
      </div>
      <i
        class="jcicon jcicon-cross "
        title="Remove file"
      />
    </div>
    <div
      class="jc-upload-list-item jc-upload-list-item-done"
    >
      <div
        class="jc-upload-list-item-info"
      >
        <span>
          <a
            class="jc-upload-list-item-thumbnail"
            href="https://cdn.xxx.com/xx.xx/aaa.png?query=123"
            rel="noopener noreferrer"
            target="_blank"
          >
            <img
              alt="image"
              src="https://cdn.xxx.com/xx.xx/aaa.png?query=123"
            />
          </a>
          <a
            class="jc-upload-list-item-name"
            href="https://cdn.xxx.com/xx.xx/aaa.png?query=123"
            rel="noopener noreferrer"
            target="_blank"
            title="image"
          >
            image
          </a>
        </span>
      </div>
      <i
        class="jcicon jcicon-cross "
        title="Remove file"
      />
    </div>
    <div
      class="jc-upload-list-item jc-upload-list-item-done"
    >
      <div
        class="jc-upload-list-item-info"
      >
        <span>
          <a
            class="jc-upload-list-item-thumbnail"
            href="https://cdn.xxx.com/xx.xx/aaa.png#anchor"
            rel="noopener noreferrer"
            target="_blank"
          >
            <img
              alt="image"
              src="https://cdn.xxx.com/xx.xx/aaa.png#anchor"
            />
          </a>
          <a
            class="jc-upload-list-item-name"
            href="https://cdn.xxx.com/xx.xx/aaa.png#anchor"
            rel="noopener noreferrer"
            target="_blank"
            title="image"
          >
            image
          </a>
        </span>
      </div>
      <i
        class="jcicon jcicon-cross "
        title="Remove file"
      />
    </div>
    <div
      class="jc-upload-list-item jc-upload-list-item-done"
    >
      <div
        class="jc-upload-list-item-info"
      >
        <span>
          <a
            class="jc-upload-list-item-thumbnail"
            href="https://cdn.xxx.com/xx.xx/aaa.png?query=some.query.with.dot"
            rel="noopener noreferrer"
            target="_blank"
          >
            <img
              alt="image"
              src="https://cdn.xxx.com/xx.xx/aaa.png?query=some.query.with.dot"
            />
          </a>
          <a
            class="jc-upload-list-item-name"
            href="https://cdn.xxx.com/xx.xx/aaa.png?query=some.query.with.dot"
            rel="noopener noreferrer"
            target="_blank"
            title="image"
          >
            image
          </a>
        </span>
      </div>
      <i
        class="jcicon jcicon-cross "
        title="Remove file"
      />
    </div>
  </div>
</span>
`;
